--- a/demoflask/templates/orderspage.html
+++ b/demoflask/templates/orderspage.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/orderspage.css">
+    <link rel="stylesheet" href="/static/home.css">
     <link rel="shortcut icon" href="/static/logo.png" type="image/x-icon">
 
 </head>
@@ -18,7 +19,37 @@
     {% block content %}
     <h3 style="margin-bottom: 30px;">Orders</h3>
 
-   
+
+
+    <div class="rgfilter">
+        {% for data in fildata %}
+        <div class="boxes">
+            <h3 id="boxicons"><i class="far fa-chart-bar"></i></h3>
+            <h3>Total Orders:</h3>
+            <span>{{data[0]}}</span>
+        </div>
+
+        <div class="boxes">
+            <h3 id="boxicons"><i class="fas fa-chart-bar"></i></h3>
+            <h3>Completed Orders:</h3>
+            <span>{{data[1]}}</span>
+        </div>
+
+
+        <div class="boxes">
+            <h3 id="boxicons"><i class="fas fa-exclamation-circle" style="background-color: red;"></i></h3>
+            <h3>Orders Pending:</h3>
+            <span style="color:crimson;opacity: 0.7;">Need Action</span>
+
+            <span>{{data[2]}}</span>
+
+        </div>
+
+
+        {% endfor %}
+
+    </div>
+
 
     <div class="container orders-container">
 
