--- a/demoflask/static/orderspage.css
+++ b/demoflask/static/orderspage.css
@@ -14,7 +14,20 @@
   width: 90%;
   font-family: "Sono", sans-serif;
 }
+.rgfilter {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  background-color: #edf2f4;
+  margin: 10px 10px 50px 0;
 
+  padding: 10px;
+  border-radius: 10px;
+}
 table {
   width: 100%;
 
